--- a/eccomerce/src/App.css
+++ b/eccomerce/src/App.css
@@ -34,3 +34,15 @@
 .sinItems{
   padding: 50px;
 }
+.cartWidget{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+.categorias{
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+  justify-content: center;
+}
